--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vue-socket.io": "^3.0.10",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
